--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "nodemon --ignore memoization.json index.js",
     "start": "node index.js",
+    "create:oils-relationship": "node createOilToEnginesRelationship.js",
+    "create:engines-makers-relationship": "node createEngineToModelsAndYearsRelationship.js",
+    "create:oils-list": "node getOilsFromRelationship.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
